fdo#53456: initialize pivot tables *after* the formula cells.

Or else all the formula cells within pivot table's source ranges would
be treated as if they are empty.

Change-Id: Ib04f4902863b091c483711eeaf31a282f6feaf67